--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@
                       <!-- Aquí van los divs de los libros -->
                       <div class="col-md-4 col-sm-6 col-xs-12 mix portfolio ">
                           <div class="item">
-                              <a href="images/tapas/informatica/1.jpg" class="portfolio-popup" title="Título del libro">
-                                  <img src="images/tapas/informatica/1.jpg" alt="Título del libro" style="max-width: 100%; height: auto;">
+                              <a href="images/tapas/informatica/1.JPG" class="portfolio-popup" title="Título del libro">
+                                  <img src="images/tapas/informatica/1.JPG" alt="Título del libro" style="max-width: 100%; height: auto;">
                               </a>
                               <div class="book-info">
                                   <p><strong>Código:</strong> 001</p>
@@ -459,8 +459,8 @@
                       <!-- Ejemplo con otro libro -->
                       <div class="col-md-4 col-sm-6 col-xs-12 mix portfolio ">
                           <div class="item">
-                              <a href="images/tapas/informatica/2.jpg" class="portfolio-popup" title="Título del libro">
-                                  <img src="images/tapas/informatica/2.jpg" alt="Título del libro" style="max-width: 100%; height: auto;">
+                              <a href="images/tapas/informatica/2.JPG" class="portfolio-popup" title="Título del libro">
+                                  <img src="images/tapas/informatica/2.JPG" alt="Título del libro" style="max-width: 100%; height: auto;">
                               </a>
                               <div class="book-info">
                                   <p><strong>Código:</strong> 002</p>
@@ -472,8 +472,8 @@
                       </div>
                       <div class="col-md-4 col-sm-6 col-xs-12 mix cristianismo ">
                         <div class="item">
-                            <a href="images/tapas/cristianismo/2.jpg" class="cristianismo-popup" title="Título del libro">
-                                <img src="images/tapas/cristianismo/2.jpg" alt="Título del libro" style="max-width: 100%; height: auto;">
+                            <a href="images/tapas/cristianismo/2.JPG" class="cristianismo-popup" title="Título del libro">
+                                <img src="images/tapas/cristianismo/2.JPG" alt="Título del libro" style="max-width: 100%; height: auto;">
                             </a>
                             <div class="book-info">
                                 <p><strong>Código:</strong> 002</p>
