--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                   <div class="col-md-offset-3 col-sm-offset-2 col-md-6 col-sm-8">
                       <div class="row">
                           <div class="contact-us-detail text-center">
-                              <a href="https://wa.me/5493863432149?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n%20sobre%20tus%20servicios" class="btn btn-primary btn-lg">
+                              <a href="https://wa.me/5493863432149?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n%20sobre%20tus%20servicios" class="btn btn-primary btn-lg" target="_blank">
                                   <i class="icon-whatsapp"></i> Por WhatsApp
                               </a>
                           </div>
@@ -649,9 +649,6 @@
           </div>
       </div>
   </section>
-  
-  <!-- Asegúrate de tener el enlace a FontAwesome en tu proyecto para los íconos -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   
      <!-- Contact End -->
        
